Fix theme-color not supporting rgb

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="rgb(251,231,81)"/>
+    <meta name="theme-color" content="#fbe751"/>
     
     <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" type="image/png" href="/assets/images/icons/launchericon-96.png" />
