Add github link.

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,10 @@
       </div>
     </section>
 
+    <a href="https://github.com/MountainDrew" class="github-link" target="_blank">
+      <img src="/assets/images/icons/github.png" />
+    </a>
+
     <script src="/dist/main.js"></script>
     <script>
       if ('serviceWorker' in navigator) {
