Add img alt tag.

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <a href="https://github.com/MountainDrew" class="github-link" target="_blank">
-      <img src="/assets/images/icons/github.png" />
+      <img src="/assets/images/icons/github.png" alt="View source on github" />
     </a>
 
     <script src="/dist/main.js"></script>
