Add main landmark / noopener link.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <title>The Metronome App</title>
     <meta name="description" content="Your stylistic virtual metronome on the go." />
@@ -26,7 +25,7 @@
   </head>
   <body>
     <div class="tooltip-container"></div>
-    <section class="container">
+    <main class="container">
       <svg tabindex="0" class="metronome" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1111 1436" width="1000" height="1293" data-js-metronome>
         <style>
           tspan { white-space:pre }
@@ -79,9 +78,9 @@
         <button data-js-decrement>&minus;</button>
         <button data-js-increment>&plus;</button>
       </div>
-    </section>
+    </main>
 
-    <a href="https://github.com/MountainDrew" class="github-link" target="_blank">
+    <a href="https://github.com/MountainDrew" class="github-link" target="_blank" rel="noopener">
       <img src="/assets/images/icons/github.png" alt="View source on github" />
     </a>
 
