Update github link.

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
       </div>
     </main>
 
-    <a href="https://github.com/MountainDrew/MTRM.app" class="github-link" target="_blank" rel="noopener">
+    <a href="https://github.com/amprew/MTRM.app" class="github-link" target="_blank" rel="noopener">
       <img src="/assets/images/icons/github.png" alt="View source on github" />
     </a>
 
